# akuru-token

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: build_test.yml
akuru_token/: __init__.py  pretokenizer.py  tokenizer.py  trainer.py  vocab.py
akuru_token/vocabs/: sin_eng.json  sin_eng_gpt2.json
docs/: index.html
scripts/: README.md  __init__.py  data_cleaner.py  data_downloader.py  diff_sample.py  measure_fertility.py  sin_eng_trainer.py  sinhala_validator.py
test/: conftest.py  test_sinhala_validator.py  test_tokenizer.py  test_trainer.py
